--- a/asset/css/styleadmin.css
+++ b/asset/css/styleadmin.css
@@ -6,12 +6,11 @@
   }
   .header {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    padding: 10px;
-    background: #9fa8eb;
-    background: linear-gradient(to left, #90bef7, #da8686);
-    color: #fff;
+    padding: 40px;
+    background: #FF0000;
+    color: #00000;
   }
   
   .u-name {
@@ -21,7 +20,7 @@
   .content {
     width: 100%;
     position: absolute;
-    color: rgb(171, 121, 121);
+    color: rgb(255, 255, 255);
     top: 45%;
     transform: translateY(-50%);
     text-align: center;
@@ -37,8 +36,7 @@
   }
   
   .body {
-    background-color : #7298c1 ;
-    background: linear-gradient(to right, #90bef7, #f4eeee);
+    background-color : #ffffff ;
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: scroll;
@@ -52,7 +50,7 @@
     height:300px;
     left: 20%;
     margin: 70px;
-    background:#6484db;
+    background:#FF0000;
     border-radius: 5px;
     position:absolute;
     top: 50%;
@@ -106,34 +104,48 @@
     padding: 5px 0;
   }
   .side-bar {
-    width: 250px;
-    background: #9fa8eb;
-    background: linear-gradient(to left, #90bef7, #da8686);
+    width: 260px;
+    background: #FF0000;
     min-height: 100vh;
     transition: 500ms width;
+    
   }
   
   .side-bar ul {
-    margin-top: 20px;
+    margin-top: 5px;
+    margin-bottom: 10px;
     list-style: none;
+    justify-content: center;
   }
   .side-bar ul li {
     font-size: 16px;
-    padding: 15px 0px;
+    padding: 20px 0px;
+    margin-bottom: 30px;
     padding-left: 20px;
-    transition: 500ms background;
+    transition: 500ms;
     white-space: nowrap;
+    text-align: center;
+    justify-content: center;
+    width: 80%;
+    margin-left: 20px;
     overflow: hidden;
+    border-radius: 15px;
+    cursor: pointer;
     text-overflow: ellipsis;
+    background: #FFF0F0;
   }
   .side-bar ul li:hover {
-    background: #8e121a;
+    background: #807c7c;
   }
   .side-bar ul li a {
     text-decoration: none;
-    color: #eee;
-    cursor: pointer;
+    color: #000000;
     letter-spacing: 1px;
+    font-weight: bold;
+  }
+  .side-bar ul li a .button {
+    border-radius: 50px;
+    background-color: ;
   }
   .side-bar ul li a i {
     display: inline-block;
